--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-cors = "0.6.4"
+actix-web = "4.2.1"
+chrono = "0.4.22"
+fern = "0.6.1"
+log = "0.4.17"
+serde = { version = "1.0.147", features = ["derive"] }
+toml = "0.5.9"
