--- a/.github/workflows/rustfmt-check.yml
+++ b/.github/workflows/rustfmt-check.yml
@@ -1,6 +1,10 @@
-on: push
-
 name: Rustfmt check
+
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   format:
