--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ actix-web = "4.2.1"
 chrono = "0.4.22"
 fern = "0.6.1"
 log = "0.4.17"
+mongodb = "2.3.1"
 serde = { version = "1.0.147", features = ["derive"] }
 toml = "0.5.9"
