--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-cors = "0.6.4"
 actix-web = "4.2.1"
 chrono = "0.4.22"
+cnsl = "0.1.3"
 fern = "0.6.1"
 log = "0.4.17"
 mongodb = "2.3.1"
