--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ chrono = "0.4.22"
 cnsl = "0.1.3"
 fern = "0.6.1"
 log = "0.4.17"
-mongodb = "2.3.1"
+rpassword = "7.1.0"
+rust-s3 = { version = "0.32.3" }
 serde = { version = "1.0.147", features = ["derive"] }
+thiserror = "1.0.37"
 toml = "0.5.9"
